--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,10 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="36dp"
         android:background="#303030"
-        android:text="Button"
+        android:editable="true"
+        android:text="GitHub Repository"
+        android:textAllCaps="false"
+        android:textSize="24sp"
         app:backgroundTint="#131313"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
